--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
     compileSdk 34
 
     defaultConfig {
-        applicationId "ru.dgis.sdk.demo"
+        applicationId 'kstechtams.com'
         minSdkVersion 21
         targetSdkVersion 34
         versionCode 1
